gcc/testsuite/rust/rustc/ui/mismatched_types/non_zero_assigned_something.rs
fn main() {
    let _: std::num::NonZero<u64> = 1;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { help ".E0308." "" { target *-*-* } .-2 }

    let _: Option<std::num::NonZero<u64>> = 1;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { help ".E0308." "" { target *-*-* } .-2 }
}

